# deli_audio_analysis

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_app.bat  run_app.ps1  run_app.sh
src/: app.py
src/deli_audio_analysis/: __init__.py  deli_audio_analysis.py
