[project]
name = "deli-audio-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Timothy0508",email = "99249271+Timothy0508@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow (>=2.19.0,<3.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "numpy (<2.2.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlsxwriter (>=3.2.2,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "numba (>=0.61.0,<0.62.0)"
]

[tool.poetry]
packages = [{include = "deli_audio_analysis", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.13"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
